flex layout issue fix

--- a/src/app/core/components/home/home.component.scss
+++ b/src/app/core/components/home/home.component.scss
@@ -5,7 +5,7 @@
     justify-content: center;
 }
 .product-card {
-    flex: 1 1 auto;
+    //flex: 1 1 auto;
     max-width: 300px;
     padding: 16px;
 }
